// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-jLFzpH jGegF"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
Array [
  <h3
    className="sc-jLFzpH jGegF"
  >
    Default color is Bulma
  </h3>,
  <h3
    className="sc-jLFzpH bfKaYQ"
    color="piccolo.100"
  >
    Piccolo
  </h3>,
  <h3
    className="sc-jLFzpH hXqjse"
    color="trunks.100"
  >
    Trunks
  </h3>,
  <h3
    className="sc-jLFzpH cvoDBI"
    color="krillin.100"
  >
    Krillin
  </h3>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <h3
    className="sc-jLFzpH jGegF"
  >
    Default font-weight is bold
  </h3>,
  <h3
    className="sc-jLFzpH eGzghk"
  >
    Font-weight is regular
  </h3>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <h3
    className="sc-jLFzpH jGegF"
  >
    Line-height is pre-calculated
  </h3>,
  <h3
    className="sc-jLFzpH jxsivE"
  >
    Custon line-height
  </h3>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <h3
    className="sc-jLFzpH jGegF"
  >
    H3 is a default tag
  </h3>,
  <h2
    className="sc-jLFzpH jGegF"
  >
    H2 tag
  </h2>,
  <h6
    className="sc-jLFzpH jGegF"
  >
    H6 tag
  </h6>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <h3
    className="sc-jLFzpH jGegF"
  >
    Default font-size is 16px
  </h3>,
  <h3
    className="sc-jLFzpH hKfpqe"
    size={24}
  >
    Size is 24px
  </h3>,
  <h3
    className="sc-jLFzpH kFmZZa"
    size={48}
  >
    Size is 48px
  </h3>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <h3
    className="sc-jLFzpH jGegF"
  >
    Text-align is not specified
  </h3>,
  <h3
    className="sc-jLFzpH dASHOW"
  >
    Centered Heading
  </h3>,
  <h3
    className="sc-jLFzpH buxASB"
  >
    Right alignment
  </h3>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <h3
    className="sc-jLFzpH jGegF"
  >
    Default text-decoration is none
  </h3>,
  <h3
    className="sc-jLFzpH etEBqY"
  >
    Underline Heading
  </h3>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <h3
    className="sc-jLFzpH jGegF"
  >
    Default text-transform is none
  </h3>,
  <h3
    className="sc-jLFzpH dvmsVq"
  >
    Uppercase Heading
  </h3>,
]
`;
